# openenclave

./: .gitmodules  owners.txt
.pipelines/: pipeline.user.windows.yml  pipeline.user.yml  restore_submodules.cmd
samples/remote_attestation/host/: Makefile  host.cpp
src/IGVMAgent/: CMakeLists.txt  CMakeSettings.json  README.md  build.cmd  cmake_build.cmd  package.cmd  restore.cmd  restore.ps1  test.cmd  vcpkg-windows.txt
src/IGVMAgent/agent/: CMakeLists.txt  IGVmAgent.cpp  IGVmAgent.h  IGVmAgent_s_stub.c  Main.cpp  Rpc.cpp  pch.h
src/IGVMAgent/agent/clients/: aad_client.cpp  akv_skr_client.cpp  ccf_skr_client.cpp  maa_client.cpp
src/IGVMAgent/agent/include/clients/: aad_client.h  akv_skr_client.h  ccf_skr_client.h  client_exceptions.h  maa_client.h  skr_client.h
src/IGVMAgent/agent/include/common/: Base64.h  Base64Decode.h  Logger.h  SafeConvert.h  identity.h
src/IGVMAgent/agent/include/hcl/: VbsVmCrypto.h
src/IGVMAgent/agent/tests/: CMakeLists.txt
src/IGVMAgent/agent/tests/aad_client/: CMakeLists.txt  host.cpp
src/IGVMAgent/agent/tests/akv_skr_client/: CMakeLists.txt  host.cpp
src/IGVMAgent/agent/tests/akv_skr_client/data/: skr_policy invalid_key_size.json  skr_policy.json
src/IGVMAgent/agent/tests/ccf_skr_client/: CMakeLists.txt  host.cpp
src/IGVMAgent/agent/tests/ccf_skr_client/data/: skr_policy invalid_mrsigner.json  skr_policy invalid_not_exportable.json
src/IGVMAgent/agent/tests/include/: tests.h
src/IGVMAgent/agent/tests/maa_client/: CMakeLists.txt  host.cpp
src/IGVMAgent/agent/tests/maa_client/data/: oe_sgx_evidence_base64  sgx_enc_held_data_base64
src/IGVMAgent/agent/tests/rpc_client/: CMakeLists.txt  IGVmAgent_c_stub.c  rpc_client.cpp  runtests.cmake
src/IGVMAgent/agent/tests/rpc_client/script/: run_rpc_client_test.cmd
src/IGVMAgent/docs/: aad_maa_clients.md  skr_client.md
src/IGVMAgent/idl/: CMakeLists.txt  IGVmAgentRpc.acf  IGVmAgentRpc.idl
